--- a/src/main/resources/templates/Board/Txt.html
+++ b/src/main/resources/templates/Board/Txt.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout=http://www.ultraq.net.nz/thymeleaf/layout
@@ -7,4 +8,4 @@
         본문
     </div>
 
-</html>
+</html>-->
