--- a/src/main/resources/templates/Board/Txt.html
+++ b/src/main/resources/templates/Board/Txt.html
@@ -1,11 +1,36 @@
-<!--
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout=http://www.ultraq.net.nz/thymeleaf/layout
-      layout:decorate="~{layouts/layout1}">
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorate="~{layouts/layout1}">
+<head>
+</head>
+<body>
+<header th:insert="fragments/header.html"></header>
 
-    <div layout:fragment="content">
-        본문
+<div layout:fragment="content">
+    <div class="content" style="margin-top: 50px;">
+        <form action="/post" method="post">
+            <div class="form-group row">
+                <label for="inputTitle" class="col-sm-2 col-form-label"><strong>제목</strong></label>
+                <div class="col-sm-10">
+                    <input type="text" name="title" class="form-control" id="inputTitle" />
+                </div>
+            </div>
+
+            <div class="form-group row">
+                <label for="inputContent" class="col-sm-2 col-form-label"><strong>내용</strong></label>
+                <div class="col-sm-10">
+                    <textarea type="text" name="content" class="form-control" id="inputContent"></textarea>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-auto mr-auto"></div>
+                <div class="col-auto">
+                    <input class="btn btn-primary" type="submit" role="button" value="글쓰기" />
+                </div>
+            </div>
+        </form>
     </div>
-
-</html>-->
+</div>
+</body>
+</html>
