--- a/src/main/resources/templates/Board/Txt.html
+++ b/src/main/resources/templates/Board/Txt.html
@@ -1,35 +1,83 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-  layout:decorate="~{layouts/layout1}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/layout1}">
 <head>
+    <meta charset="UTF-8" />
+    <title>게시판 - 글쓰기</title>
+    <link rel="stylesheet" href="/webjars/bootstrap/4.5.0/css/bootstrap.min.css" />
+    <style>
+        .form-container {
+            border: 1px solid #ccc;
+            padding: 20px;
+            border-radius: 5px;
+            margin-top: 50px;
+        }
+        .hashtag-container {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            gap: 10px;
+        }
+        .hashtag-input {
+            width: 150px;
+        }
+        .file-container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-top: 10px;
+        }
+        .file-path {
+            flex: 1;
+            margin-right: 10px;
+        }
+        .btn-add {
+            cursor: pointer;
+        }
+        .btn-remove {
+            cursor: pointer;
+        }
+    </style>
 </head>
 <body>
 <header th:insert="fragments/header.html"></header>
 
 <div layout:fragment="content">
-    <div class="content" style="margin-top: 50px;">
-        <form action="/post" method="post">
-            <div class="form-group row">
-                <label for="inputTitle" class="col-sm-2 col-form-label"><strong>제목</strong></label>
-                <div class="col-sm-10">
-                    <input type="text" name="title" class="form-control" id="inputTitle" />
-                </div>
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-md-8">
+                <form action="/post" method="post" enctype="multipart/form-data">
+                    <div class="form-container">
+                        <div class="form-group">
+                            <label for="inputTitle"><strong>제목</strong></label>
+                            <input type="text" name="title" class="form-control" id="inputTitle" />
+                        </div>
+                        <div class="form-group">
+                            <label for="inputContent"><strong>내용</strong></label>
+                            <textarea name="content" class="form-control" id="inputContent" rows="5"></textarea>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputHashtag"><strong>해시태그</strong></label>
+                            <div class="hashtag-container">
+                                <input type="text" name="hashtag" class="form-control hashtag-input" id="inputHashtag" />
+                                <button type="button" class="btn btn-primary btn-add">+</button>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="inputFile"><strong>파일 첨부</strong></label>
+                            <div class="file-container">
+                                <input type="text" name="file-path" class="form-control file-path" id="inputFile" readonly />
+                                <button type="button" class="btn btn-primary btn-file">파일 첨부</button>
+                                <button type="button" class="btn btn-danger btn-remove">-</button>
+                            </div>
+                        </div>
+                        <div class="form-group text-center">
+                            <button type="submit" class="btn btn-primary">글쓰기</button>
+                            <button type="button" class="btn btn-secondary">취소</button>
+                        </div>
+                    </div>
+                </form>
             </div>
-
-            <div class="form-group row">
-                <label for="inputContent" class="col-sm-2 col-form-label"><strong>내용</strong></label>
-                <div class="col-sm-10">
-                    <textarea type="text" name="content" class="form-control" id="inputContent"></textarea>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-auto mr-auto"></div>
-                <div class="col-auto">
-                    <input class="btn btn-primary" type="submit" role="button" value="글쓰기" />
-                </div>
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 </body>
