--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -15,10 +15,10 @@
           <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
               <ul class="navbar-nav">
                   <li class="nav-item" sec:authorize="isAnonymous()">
-                      <a class="nav-link " href="/members/login">로그인</a>
+                      <a class="nav-link " href="/user/login">로그인</a>
                   </li>
                   <li class="nav-item" sec:authorize="isAuthenticated()">
-                      <a class="nav-link" href="/members/logout">로그아웃</a>
+                      <a class="nav-link" href="/user/logout">로그아웃</a>
                   </li>
               </ul>
           </div>
