--- a/src/main/resources/templates/users/userForm.html
+++ b/src/main/resources/templates/users/userForm.html
@@ -2,11 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
+
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
     <style>
-        .fieldError{
-            color:#bd2130;
+        .fieldError {
+            color: #bd2130;
         }
     </style>
 </th:block>
@@ -14,43 +15,76 @@
 <!-- 사용자 스크립트 추가 -->
 <th:block layout:fragment="script">
 
+    <!--    회원가입 실패 시 경고창-->
     <script th:inline="javascript">
-        $(document).ready(function (){
+        $(document).ready(function() {
             var errorMessage = [[${errorMessage}]];
-            if(errorMessage != null){
+            if(errorMessage != null) {
                 alert(errorMessage);
             }
         });
     </script>
+
 </th:block>
 
 <div layout:fragment="content">
-    <form action="/user/new" role="form" method="post" th:object="${hbrg_userFormDto}">
+
+    <form action="/user/new" role="form" method="post"
+          th:object="${hbrg_userFormDto}">
+
         <div class="form-group">
             <label th:for="id">아이디</label>
-            <input type="text" th:field="*{id}" class="form-control" placeholder="아이디를 입력해주세요">
-            <p th:if="${#fields.hasErrors('id')}" th:errors="*{id}" class="fieldError">Incorrect data</p>
+            <input type="text" th:field="*{id}" class="form-control"
+                   placeholder="아이디를 입력하세요.">
+            <p th:if="${#fields.hasErrors('id')}"
+               th:errors="*{id}" class="fieldError">Incorrect data</p>
         </div>
+
         <div class="form-group">
-            <label th:for="em">이메일주소</label>
-            <input type="text" th:field="*{em}" class="form-control" placeholder="이메일을 입력해주세요">
-            <p th:if="${#fields.hasErrors('em')}" th:errors="*{em}" class="fieldError">Incorrect data</p>
+            <label th:for="nic">닉네임</label>
+            <input type="text" th:field="*{nic}" class="form-control"
+                   placeholder="닉네임을 입력하세요.">
+            <p th:if="${#fields.hasErrors('nic')}"
+               th:errors="*{nic}" class="fieldError">Incorrect data</p>
         </div>
+
         <div class="form-group">
             <label th:for="pw">비밀번호</label>
-            <input type="password" th:field="*{pw}" class="form-control" placeholder="비밀번호 입력">
-            <p th:if="${#fields.hasErrors('pw')}" th:errors="*{pw}" class="fieldError">Incorrect data</p>
+            <input type="password" th:field="*{pw}" class="form-control"
+                   placeholder="비밀번호를 입력하세요.">
+            <p th:if="${#fields.hasErrors('pw')}"
+               th:errors="*{pw}" class="fieldError">Incorrect data</p>
         </div>
+
+        <div class="form-group">
+            <label th:for="em">이메일</label>
+            <input type="email" th:field="*{em}" class="form-control"
+                   placeholder="이메일을 입력하세요.">
+            <p th:if="${#fields.hasErrors('em')}"
+               th:errors="*{em}" class="fieldError">Incorrect data</p>
+        </div>
+
         <div class="form-group">
             <label th:for="ad">주소</label>
-            <input type="text" th:field="*{ad}" class="form-control" placeholder="주소를 입력해 주세요">
-            <p th:if="${#fields.hasErrors('ad')}" th:errors="*{ad}" class="fieldError">Incorrect data</p>
+            <input type="text" th:field="*{ad}" class="form-control"
+                   placeholder="주소를 입력하세요.">
+            <p th:if="${#fields.hasErrors('ad')}"
+               th:errors="*{ad}" class="fieldError">Incorrect data</p>
         </div>
-        <div style="text-align: center">
-            <button type="submit" class="btn btn-primary" style="">회원가입</button>
+
+        <div class="form-group">
+            <label th:for="ph">연락처</label>
+            <input type="number" th:field="*{ph}" class="form-control"
+                   placeholder="연락처를 입력하세요.">
+            <p th:if="${#fields.hasErrors('ph')}"
+               th:errors="*{ph}" class="fieldError">Incorrect data</p>
         </div>
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+
+        <div style="text-align:center">
+            <button type="submit" class="btn btn-primary" style="">확인</button>
+        </div>
+        <input type="hidden" th:name="${_csrf.parameterName}"
+               th:value="${_csrf.token}">
     </form>
 </div>
-
 </html>
