--- a/src/main/resources/templates/Board/Content.html
+++ b/src/main/resources/templates/Board/Content.html
@@ -1,4 +1,3 @@
-<!--
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout=http://www.ultraq.net.nz/thymeleaf/layout
@@ -8,4 +7,4 @@
         본문
     </div>
 
-</html>-->
+</html>
