--- a/src/main/resources/templates/users/userForm.html
+++ b/src/main/resources/templates/users/userForm.html
@@ -30,7 +30,7 @@
 <div layout:fragment="content">
 
     <form action="/user/new" role="form" method="post"
-          th:object="${hbrg_userFormDto}">
+          th:object="${userFormDto}">
 
         <div class="form-group">
             <label th:for="id">아이디</label>
