--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
                   aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
-          <a class="navbar-brand" href="/">놀러와요~<br><h3>대나무숲</h3></a>
+          <a class="navbar-brand" href="/">모여봐요~<br><h3>대나무숲</h3></a>
 
           <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
               <ul class="navbar-nav">
