--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -4,7 +4,7 @@
 <div class="footer" th:fragment="footer">
     <footer class="page-footer font-small cyan darken-3">
         <div class="footer-copyright text-center py-3">
-            놀러와요~ 대나무숲
+            Create By HBRG.
         </div>
     </footer>
 </div>
