css 분리 및 수정
css 분리 및 수정

--- a/src/main/resources/templates/content.html
+++ b/src/main/resources/templates/content.html
@@ -5,58 +5,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>게시판 - 글쓰기</title>
-    <link rel=stylesheet"stylesheet" href="/webjars/bootstrap/4.5.0/css/bootstrap.min.css" />
-
-    <style>
-        .form-container {
-            background-color: white;
-            border: 1px solid #ccc;
-            padding: 20px;
-            border-radius: 5px;
-            margin-top: 50px;
-        }
-        .hashtag-container {
-            display: flex;
-            flex-wrap: wrap;
-            align-items: center;
-            gap: 10px;
-        }
-        .hashtag-input {
-            width: 150px;
-        }
-        .file-container {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            margin-top: 10px;
-        }
-        .file-path {
-            flex: 1;
-            margin-right: 10px;
-        }
-        .btn-add {
-            cursor: pointer;
-        }
-        .btn-remove {
-            cursor: pointer;
-        }
-
-     body {
-        background-image: url("/img/bg.jpg");
-        background-size: cover;
-        background-repeat: no-repeat;
-        background-position: center center;
-        }
-        .bg-img {
-            width: 100%;
-            height: auto;
-        }
-        .table-container {
-        display: flex;
-        justify-content: center;
-        }
-    </style>
-
+    <link rel="stylesheet" href="/webjars/bootstrap/4.5.0/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 </head>
 <body>
 <header th:insert="fragments/header.html"></header>
