--- a/src/main/resources/templates/sub02Form.html
+++ b/src/main/resources/templates/sub02Form.html
@@ -3,59 +3,185 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 
+<!--<head>-->
+<!--    <meta name="_csrf" th:content="${_csrf.token}"/>-->
+<!--    <meta name="_csrf_header" th:content="${_csrf.headerName}"/>-->
+<!--</head>-->
+
 <!-- 사용자 스크립트 추가 -->
 <th:block layout:fragment="script">
-  <script th:inline="javascript">
-    $(document).ready(function() {
-      var errorMessage = [[${errorMessage}]];
-      if(errorMessage != null) {
-        alert(errorMessage);
-      }
-    });
-  </script>
+    <script th:inline="javascript">
+        $(document).ready(function(){
+
+            calculateToalPrice();
+
+            $("#count").change( function(){
+                calculateToalPrice();
+            });
+        });
+
+        function calculateToalPrice(){
+            var count = $("#count").val();
+            var price = $("#price").val();
+            var totalPrice = price*count;
+            $("#totalPrice").html(totalPrice + '원');
+        }
+
+        function order(){
+            var token = $("meta[name='_csrf']").attr("content");
+            var header = $("meta[name='_csrf_header']").attr("content");
+
+            var url = "/order";
+            var paramData = {
+                itemId : $("#itemId").val(),
+                count : $("#count").val()
+            };
+
+            var param = JSON.stringify(paramData);
+
+            $.ajax({
+                url      : url,
+                type     : "POST",
+                contentType : "application/json",
+                data     : param,
+                beforeSend : function(xhr){
+                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+                    xhr.setRequestHeader(header, token);
+                },
+                dataType : "json",
+                cache   : false,
+                success  : function(result, status){
+                    alert("주문이 완료 되었습니다.");
+                    location.href='/';
+                },
+                error : function(jqXHR, status, error){
+
+                    if(jqXHR.status == '401'){
+                        alert('로그인 후 이용해주세요');
+                        location.href='/members/login';
+                    } else{
+                        alert(jqXHR.responseText);
+                    }
+
+                }
+            });
+        }
+
+        function addCart(){
+            var token = $("meta[name='_csrf']").attr("content");
+            var header = $("meta[name='_csrf_header']").attr("content");
+
+            var url = "/cart";
+            var paramData = {
+                itemId : $("#itemId").val(),
+                count : $("#count").val()
+            };
+
+            var param = JSON.stringify(paramData);
+
+            $.ajax({
+                url      : url,
+                type     : "POST",
+                contentType : "application/json",
+                data     : param,
+                beforeSend : function(xhr){
+                    /* 데이터를 전송하기 전에 헤더에 csrf값을 설정 */
+                    xhr.setRequestHeader(header, token);
+                },
+                dataType : "json",
+                cache   : false,
+                success  : function(result, status){
+                    alert("상품을 장바구니에 담았습니다.");
+                    location.href='/';
+                },
+                error : function(jqXHR, status, error){
+
+                    if(jqXHR.status == '401'){
+                        alert('로그인 후 이용해주세요');
+                        location.href='/members/login';
+                    } else{
+                        alert(jqXHR.responseText);
+                    }
+
+                }
+            });
+        }
+
+    </script>
 </th:block>
 
-<div layout:fragment="content">
+<!-- 사용자 CSS 추가 -->
+<th:block layout:fragment="css">
+    <style>
+        .mgb-15{
+            margin-bottom:15px;
+        }
+        .mgt-30{
+            margin-top:30px;
+        }
+        .mgt-50{
+            margin-top:50px;
+        }
+        .repImgDiv{
+            margin-right:15px;
+            height:auto;
+            width:50%;
+        }
+        .repImg{
+            width:100%;
+            height:400px;
+        }
+        .wd50{
+            height:auto;
+            width:50%;
+        }
+    </style>
+</th:block>
 
-  <form action="/list/ex01" role="form" method="post" th:object="${BoardFormDto}">
-    <h1>링크 이동</h1>
+<div layout:fragment="content" style="margin-left:25%;margin-right:25%">
 
-    <div>
-      <button type="button" onclick="location.href='/list'">메인페이지 이동</button>
-      <a th:href="@{/list/ex01}"> 메인페이지 이동</a>
+    <input type="hidden" id="BoardId" th:value="${board.boardId}">
+
+    <div class="d-flex">
+        <div class="repImgDiv">
+            <!--            <img th:src="${board.fileDtoList[0].fileUrl}" class = "rounded repImg" th:alt="${board.title}">-->
+        </div>
+        <div class="wd50">
+            <div class="h4" th:text="${board.title}"></div>
+            <hr class="my-4">
+
+            <div class="text-right">
+                <div class="input-group w-50">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">조회수</span>
+                    </div>
+                    <input type="number" name="count" id="count" class="form-control" value="1" min="1">
+                </div>
+            </div>
+            <hr class="my-4">
+
+            <div class="text-right mgt-50">
+                <h5>결제 금액</h5>
+            </div>
+            <div class="text-right">
+                <button type="button" class="btn btn-light border border-primary btn-lg" onclick="addCart()">장바구니 담기</button>
+                <button type="button" class="btn btn-primary btn-lg" onclick="order()">주문하기</button>
+            </div>
+        </div>
     </div>
 
-    <input type="hidden" th:field="*{boardId}">
-
-    <div class="form-group">
-      <label th:for="id">ID</label>
-      <input type="text" th:field="*{id}" class="form-control" placeholder="아이디를 입력해주세요">
-    </div>
-    <p th:if="${#fields.hasErrors('id')}" th:errors="*{id}" class="fieldError">Incorrect data</p>
-
-<!--    <div class="form-group">-->
-<!--      <label th:for="boardid">num</label>-->
-<!--      <input type="number" th:field="*{boardId}" class="form-control" placeholder="넘버를 입력해주세요">-->
-<!--    </div>-->
-<!--    <p th:if="${#fields.hasErrors('boardId')}" th:errors="*{boardId}" class="fieldError">Incorrect data</p>-->
-
-
-    <div class="form-group">
-      <label th:for="title">제목</label>
-      <input type="text" th:field="*{title}" class="form-control" placeholder="제목을 입력해주세요">
-    </div>
-    <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="fieldError">Incorrect data</p>
-
-    <div class="form-group">
-      <label th:for="txt">본문</label>
-      <input type="text" th:field="*{txt}" class="form-control" placeholder="본문을 입력해주세요">
-      <p th:if="${#fields.hasErrors('txt')}" th:errors="*{txt}" class="fieldError">Incorrect data</p>
+    <div class="jumbotron jumbotron-fluid mgt-30">
+        <div class="container">
+            <h4 class="display-5">내용</h4>
+            <hr class="my-4">
+            <p class="lead" th:text="${board.txt}"></p>
+        </div>
     </div>
 
-    <div style="text-align:center">
-      <button type="submit" class="btn btn-primary" style="">저장</button>
-    </div>
-<!--    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
-  </form>
+    <!--    <div th:each="hFile : ${board.fileDtoList}" class="text-center">-->
+    <!--        <img th:if="${not #strings.isEmpty(hFile.fileUrl)}" th:src="${hFile.fileUrl}" class="rounded mgb-15" width="800">-->
+    <!--    </div>-->
+
 </div>
+
 </html>
