--- a/src/main/resources/templates/users/userLoginForm.html
+++ b/src/main/resources/templates/users/userLoginForm.html
@@ -15,16 +15,16 @@
   <form role="form" method="post" action="/user/login">
     <div class="form-group">
       <label th:for="id">아이디</label>
-      <input type="id" name="id" class="form-control" placeholder="아이디를 입력해주세요">
+      <input type="text" name="id" class="form-control" placeholder="아이디를 입력해주세요">
     </div>
     <div class="form-group">
       <label th:for="pw">비밀번호</label>
-      <input type="password" name="pw" id="pw" class="form-control" placeholder="비밀번호 입력">
+      <input type="password" name="password" id="pw" class="form-control" placeholder="비밀번호 입력">
     </div>
     <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
     <button class="btn btn-primary">로그인</button>
     <button type="button" class="btn btn-primary" onclick="location.href='/user/new'">회원가입</button>
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-</div>
 </form>
+</div>
 </html>
