--- a/src/main/resources/templates/users/userForm.html
+++ b/src/main/resources/templates/users/userForm.html
@@ -2,7 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
+<head>
+    <link rel="stylesheet" href="/css/style.css" />
 
+</head>
+<body>
+<img src="/img/bg.jpg" alt="background image" class="bg-img">
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
     <style>
@@ -87,4 +92,5 @@
                th:value="${_csrf.token}">
     </form>
 </div>
+</body>
 </html>
