--- a/src/main/resources/templates/users/userLoginForm.html
+++ b/src/main/resources/templates/users/userLoginForm.html
@@ -2,7 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
+<head>
+  <link rel="stylesheet" href="/css/style.css" />
 
+</head>
+<body>
+<img src="/img/bg.jpg" alt="background image" class="bg-img">
 <!-- 사용자 CSS 추가 -->
 <th:block layout:fragment="css">
   <style>
@@ -11,20 +16,21 @@
     }
   </style>
 </th:block>
-<div layout:fragment="content">
-  <form role="form" method="post" action="/user/login">
-    <div class="form-group">
-      <label th:for="id">아이디</label>
-      <input type="text" name="id" class="form-control" placeholder="아이디를 입력해주세요">
-    </div>
-    <div class="form-group">
-      <label th:for="pw">비밀번호</label>
-      <input type="password" name="password" id="pw" class="form-control" placeholder="비밀번호 입력">
-    </div>
-    <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
-    <button class="btn btn-primary">로그인</button>
-    <button type="button" class="btn btn-primary" onclick="location.href='/user/new'">회원가입</button>
-    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-</form>
+  <div layout:fragment="content">
+    <form role="form" method="post" action="/user/login">
+      <div class="form-group">
+        <label th:for="id">아이디</label>
+        <input type="text" name="id" class="form-control" placeholder="아이디를 입력해주세요">
+      </div>
+      <div class="form-group">
+        <label th:for="pw">비밀번호</label>
+        <input type="password" name="password" id="pw" class="form-control" placeholder="비밀번호 입력">
+      </div>
+      <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
+      <button class="btn btn-primary">로그인</button>
+      <button type="button" class="btn btn-primary" onclick="location.href='/user/new'">회원가입</button>
+      <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+  </form>
 </div>
+</body>
 </html>
