--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -4,22 +4,22 @@
       layout:decorate="~{layouts/layout1}">
 
 <head>
+    <link rel="stylesheet" href="/webjars/bootstrap/4.5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/css/style.css" />
 
 </head>
 <body>
-<img src="/img/bg.jpg" alt="background image" class="bg-img">
+<header th:insert="fragments/header.html"></header>
 
 
     <!-- 검색창 부분 -->
     <div layout:fragment="content" class="text-center" style="margin-top: 100px;">
             <form class="form-inline justify-content-center">
-
                     <div class="input-group">
                     <div class="input-group-prepend">
                         <button class="btn btn-outline-secondary dropdown-toggle" type="button"
                                 id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            정렬</button>
+                            전체</button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             <a class="dropdown-item" href="#">제목</a>
                             <a class="dropdown-item" href="#">본문</a>
@@ -62,14 +62,34 @@
                                         <a class="dropdown-item" href="#">내림차순</a>
                                     </div>
                                 </div></th>
-                                <th>조회수</th>
-                                <th>좋아요</th>
                                 <th>
                                     <div class="dropdown">
                                         <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuButton3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                            생성일
+                                            조회수
                                         </button>
                                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton3">
+                                            <a class="dropdown-item" href="#">오름차순</a>
+                                            <a class="dropdown-item" href="#">내림차순</a>
+                                        </div>
+                                    </div>
+                                </th>
+                                <th>
+                                    <div class="dropdown">
+                                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuButton4" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            좋아요
+                                        </button>
+                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton4">
+                                            <a class="dropdown-item" href="#">오름차순</a>
+                                            <a class="dropdown-item" href="#">내림차순</a>
+                                        </div>
+                                    </div>
+                                </th>
+                                <th>
+                                    <div class="dropdown">
+                                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuButton5" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                            생성일
+                                        </button>
+                                        <div class="dropdown-menu" aria-labelledby="dropdownMenuButton5">
                                             <a class="dropdown-item" href="#">오름차순</a>
                                             <a class="dropdown-item" href="#">내림차순</a>
                                         </div>
@@ -129,6 +149,7 @@
             </div>
         </div>
     </div>
+
 </body>
 </html>
 
