--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -14,6 +14,7 @@
 
     <!-- 검색창 부분 -->
     <div layout:fragment="content" class="text-center" style="margin-top: 100px;">
+        <form action="/">
             <form class="form-inline justify-content-center">
                     <div class="input-group">
                     <div class="input-group-prepend">
@@ -148,8 +149,8 @@
 
             </div>
         </div>
+    </form>
     </div>
-
 </body>
 </html>
 
