--- a/src/main/resources/templates/users/userLoginForm.html
+++ b/src/main/resources/templates/users/userLoginForm.html
@@ -22,11 +22,10 @@
           <input type="password" name="password" id="pw" class="form-control" placeholder="비밀번호 입력">
         </div>
         <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
-        <button class="btn btn-primary" onclick="location.href='/'">로그인</button>
+        <button type="button" class="btn btn-primary" onclick="location.href='/'">로그인</button>
         <button type="button" class="btn btn-primary" onclick="location.href='/user/new'">회원가입</button>
         <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
     </form>
   </div>
-
 </body>
 </html>
