--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -34,7 +34,7 @@
         }
 
      body {
-       /** background-image: url("/img/bg.jpg"); **/
+        background-image: url("../img/bg.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
