--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -59,14 +59,99 @@
     background-color: white;
 }
 
+/* main button 부분 */
+
+.btn {
+  border: none;
+}
+
+button#dMB1 {      /* 버튼 전체 부분*/
+    background-color: #feec9e;
+    color: #7c6839;
+}
+
+#dMB1:hover {
+  background-color: #ffce00; /* 원하는 색상으로 변경 */
+  color: #fff9e4; /* 원하는 색상으로 변경 */
+}
+
+button#dMB2 {       /* 버튼 검색 부분 */
+    background-color: #feec9e;
+    color: #7c6839;
+}
+#dMB2:hover {
+  background-color: #ffce00; /* 원하는 색상으로 변경 */
+  color: #fff9e4; /* 원하는 색상으로 변경 */
+}
+
+button#dMB3 {       /*버튼 글쓰기 부분 */
+    background-color: #feec9e;
+    color: #7c6839;
+}
+#dMB3:hover {
+  background-color: #ffce00; /* 원하는 색상으로 변경 */
+  color: #fff9e4; /* 원하는 색상으로 변경 */
+}
+
+/* main 페이지 처리 부분 */
+.page-link {
+    color: #7c6839;
+    background-color: #feec9e;
+    border-color: #feec9e;
+}
+.page-link:hover {
+    color: #fff9e4;
+    background-color: #ffce00;
+    border-color: #ffce00;
+}
+.pagination .page-item.disabled .page-link {    /* 이전 버튼 css */
+  color: #7c6839;
+  background-color: #feec9e;
+  border-color: #feec9e;
+}
+
+
+
+
+
 
 /* userForm */
 .fieldError {
             color: #bd2130;
         }
-
+.okButton {
+    background-color: #feec9e; /* 배경색상 */
+    border-color: none; /* 테두리 없앰 */
+    color: #7c6839;
+}
+.okButton:hover {
+    background-color: #ffce00; /* 배경색상 */
+    color: #fff9e4;
+}
 
 /* userLoginForm */
  .error{
      color:#bd2130;
  }
+
+
+.loginButton {
+  background-color: #feec9e; /* 배경색상 */
+  border-color: none; /* 테두리 없앰 */
+  color: #7c6839;
+}
+.loginButton:hover {
+  background-color: #ffce00; /* 배경색상 */
+  color: #fff9e4;
+}
+
+.signupButton {
+  background-color: #feec9e; /* 배경색상 */
+  border-color: none; /* 테두리 없앰 */
+  color: #7c6839;   /* 글자 색 */
+}
+.signupButton:hover {
+  background-color: #ffce00; /* 배경색상 */
+  color: #fff9e4;
+}
+
