--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,26 +2,28 @@
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
-  <div th:fragment="header">
-      <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #66BB6A;">
-          <button class="navbar-toggler" type="button" data-toggle="collapse"
-                  data-target="#navbarTogglerDemo03"
-                  aria-controls="navbarTogglerDemo03"
-                  aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
-          <a class="navbar-brand" href="/">모여봐요~<br><h3>대나무숲</h3></a>
+<div th:fragment="header">
+    <nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #66BB6A;">
+        <button class="navbar-toggler" type="button" data-toggle="collapse"
+                data-target="#navbarTogglerDemo03"
+                aria-controls="navbarTogglerDemo03"
+                aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <a class="navbar-brand" href="/">
+            <img src="../img/home.png" alt="home image" width="120" height="80" />
+        </a>
 
-          <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
-              <ul class="navbar-nav">
-                  <li class="nav-item" sec:authorize="isAnonymous()">
-                      <a class="nav-link" href="/user/login">로그인</a>
-                  </li>
-                  <li class="nav-item" sec:authorize="isAuthenticated()">
-                      <a class="nav-link" href="/user/logout">로그아웃</a>
-                  </li>
-              </ul>
-          </div>
-      </nav>
-  </div>
+        <div class="collapse navbar-collapse justify-content-end" id="navbarTogglerDemo03">
+            <ul class="navbar-nav">
+                <li class="nav-item" sec:authorize="isAnonymous()">
+                    <a class="nav-link " href="/user/login">로그인</a>
+                </li>
+                <li class="nav-item" sec:authorize="isAuthenticated()">
+                    <a class="nav-link" href="/user/logout">로그아웃</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+</div>
 </html>
