--- a/src/main/resources/templates/users/userForm.html
+++ b/src/main/resources/templates/users/userForm.html
@@ -3,8 +3,7 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 <head>
-    <link rel="stylesheet" href="/webjars/bootstrap/4.5.0/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />    <link rel="stylesheet" href="/css/style.css"/>
 
 </head>
 <body>
@@ -25,51 +24,54 @@
 </th:block>
 
 <header th:insert="fragments/header.html"></header>
-    <div layout:fragment="content">
+<div layout:fragment="content">
+    <div class="d-flex justify-content-center">
+        <div class="col-md-8" style="background-color: #fff; border-radius: 10px; box-shadow: 0px 2px 10px rgba(0,0,0,0.1);">
+            <form action="/user/new" role="form" method="post"
+                  th:object="${userFormDto}">
 
-        <form action="/user/new" role="form" method="post"
-              th:object="${userFormDto}">
+                <div class="form-group">
+                    <label th:for="id">아이디</label>
+                    <input type="text" th:field="*{id}" class="form-control"
+                           placeholder="아이디를 입력하세요.">
+                    <p th:if="${#fields.hasErrors('id')}"
+                       th:errors="*{id}" class="fieldError">Incorrect data</p>
+                </div>
 
-            <div class="form-group">
-                <label th:for="id">아이디</label>
-                <input type="text" th:field="*{id}" class="form-control"
-                       placeholder="아이디를 입력하세요.">
-                <p th:if="${#fields.hasErrors('id')}"
-                   th:errors="*{id}" class="fieldError">Incorrect data</p>
-            </div>
+                <div class="form-group">
+                    <label th:for="nic">닉네임</label>
+                    <input type="text" th:field="*{nic}" class="form-control"
+                           placeholder="닉네임을 입력하세요.">
+                    <p th:if="${#fields.hasErrors('nic')}"
+                       th:errors="*{nic}" class="fieldError">Incorrect data</p>
+                </div>
 
-            <div class="form-group">
-                <label th:for="nic">닉네임</label>
-                <input type="text" th:field="*{nic}" class="form-control"
-                       placeholder="닉네임을 입력하세요.">
-                <p th:if="${#fields.hasErrors('nic')}"
-                   th:errors="*{nic}" class="fieldError">Incorrect data</p>
-            </div>
+                <div class="form-group">
+                    <label th:for="pw">비밀번호</label>
+                    <input type="password" th:field="*{pw}" class="form-control"
+                           placeholder="비밀번호를 입력하세요.">
+                    <p th:if="${#fields.hasErrors('pw')}"
+                       th:errors="*{pw}" class="fieldError">Incorrect data</p>
+                </div>
 
-            <div class="form-group">
-                <label th:for="pw">비밀번호</label>
-                <input type="password" th:field="*{pw}" class="form-control"
-                       placeholder="비밀번호를 입력하세요.">
-                <p th:if="${#fields.hasErrors('pw')}"
-                   th:errors="*{pw}" class="fieldError">Incorrect data</p>
-            </div>
-
-            <div class="form-group">
-                <label th:for="em">이메일</label>
-                <input type="email" th:field="*{em}" class="form-control"
-                       placeholder="이메일을 입력하세요.">
-                <p th:if="${#fields.hasErrors('em')}"
-                   th:errors="*{em}" class="fieldError">Incorrect data</p>
-            </div>
+                <div class="form-group">
+                    <label th:for="em">이메일</label>
+                    <input type="email" th:field="*{em}" class="form-control"
+                           placeholder="이메일을 입력하세요.">
+                    <p th:if="${#fields.hasErrors('em')}"
+                       th:errors="*{em}" class="fieldError">Incorrect data</p>
+                </div>
 
 
-            <div style="text-align:center">
-                <button type="submit" class="btn btn-primary" style="">확인</button>
-            </div>
-            <input type="hidden" th:name="${_csrf.parameterName}"
-                   th:value="${_csrf.token}">
-        </form>
+                <div style="text-align:center">
+                    <button type="submit" class="btn btn-primary okButton" style="">확인</button>
+                </div>
+                <!--                <input type="hidden" th:name="${_csrf.parameterName}"-->
+                <!--                       th:value="${_csrf.token}">-->
+            </form>
+        </div>
     </div>
+</div>
 
 </body>
 </html>
