--- a/src/main/resources/templates/users/userLoginForm.html
+++ b/src/main/resources/templates/users/userLoginForm.html
@@ -3,15 +3,17 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout1}">
 <head>
-  <link rel="stylesheet" href="/webjars/bootstrap/4.5.0/css/bootstrap.min.css" />
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" />  <link rel="stylesheet" href="/css/style.css" />
+
 
 </head>
 <body>
 
 <header th:insert="fragments/header.html"></header>
 
-    <div layout:fragment="content">
+<div layout:fragment="content">
+  <div class="d-flex justify-content-center">
+    <div class="col-md-8" style="background-color: #fff; border-radius: 10px; box-shadow: 0px 2px 10px rgba(0,0,0,0.1);">
       <form role="form" method="post" action="/user/login">
         <div class="form-group">
           <label th:for="id">아이디</label>
@@ -22,10 +24,16 @@
           <input type="password" name="password" id="pw" class="form-control" placeholder="비밀번호 입력">
         </div>
         <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
-        <button type="button" class="btn btn-primary" onclick="location.href='/'">로그인</button>
-        <button type="button" class="btn btn-primary" onclick="location.href='/user/new'">회원가입</button>
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-    </form>
+        <button class="btn btn-primary loginButton" onclick="location.href='/'">로그인</button>
+        <button type="button" class="btn btn-primary signupButton" onclick="location.href='/user/new'">회원가입</button>
+        <!--        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
+      </form>
+      <div style="position: relative; width: 100%; height: 20px; margin-top: -10px;">
+        <div style="position: absolute; left: 50%; transform: translateX(-50%); width: 20px; height: 20px; background-color: #fff;"></div>
+        <div style="position: absolute; left: 50%; transform: translateX(-50%); width: 10px; height: 10px; border-top: 2px solid #fff; border-left: 2px solid #fff; background-color: #fff;"></div>
+      </div>
+    </div>
   </div>
+</div>
 </body>
 </html>
