--- a/src/main/resources/templates/contentView.html
+++ b/src/main/resources/templates/contentView.html
@@ -75,17 +75,8 @@
 
 
                         <div class="form-group text-center">
-                            <!--                            <button type="button" onclick="location.href='/hbrg/ex01/' + ${boardDto.boardId}" class="btn btn-primary writeButton">수정</button>-->
-                            <button type="button" class="btn btn-primary writeButton"><a th:href="@{/hbrg/ex01/{boardId}(boardId=${boardDto.boardId})}">수정</a></button>
-                            <!--                                <form th:action="@{/hbrg/ex01/{boardId}(boardId=${boardDto.boardId})}" method="post"> <button type="submit">수정</button> </form>-->
-                            <!--                            <button onclick="location.href='/hbrg/ex01/' + ${boardDto.boardId}" type="submit"  class="btn btn-primary writeButton">수정</button>-->
-                            <!-- <button type="button" onclick="location.href='/hbrg/ex01/' + boardId" class="btn btn-primary writeButton">수정</button>-->
-                            <!--                            <button type="button" onclick="location.href='/hbrg/ex01/' + ${boardId}" class="btn btn-primary writeButton">수정</button>-->
-                            <!--                            <button type="button" onclick="location.href='/hbrg/ex01/${boardId}'" class="btn btn-primary writeButton">수정</button>-->
-                            <!--                            <button type="button" onclick="location.href='/hbrg/ex01/' + boardId" class="btn btn-primary writeButton">수정</button>-->
-                            <!--                            <a th:href="@{/hbrg/ex02/{boardId}(boardId=${boardDto.boardId})}" th:text="${boardDto.boardId}">-->
-                            <!--                            th:href="@{/hbrg/ex02/{boardId}(boardId=${boardDto.boardId})}"-->
-
+<!--                            <button type="button" class="btn btn-primary writeButton"><a th:href="@{/hbrg/ex01/{boardId}(boardId=${boardDto.boardId})}">수정</a></button>-->
+                            <button type="button" class="btn btn-primary writeButton" th:href="@{'/hbrg/ex01/'+${boardDto.boardId}}" onclick="location.href=this.getAttribute('href')">수정</button>
                             <button onclick="location.href='/'" type="button" class="btn btn-secondary cancelButton">삭제</button>
                         </div>
                     </div>
